@@ -9,7 +9,7 @@ DIR*  fdopendir ( int fd ) {
   DIR*  t  = NULL;
 
   if ( fd >= 0 ) {
-    t = (DIR *) mmap (NULL, PAGE_SIZE, PROT_READ | PROT_WRITE, 
+    t = (DIR *) mmap (NULL, DIRSTREAMSIZE, PROT_READ | PROT_WRITE, 
 		MAP_PRIVATE | MAP_ANONYMOUS, -1, 0);
     if (t != MAP_FAILED)
       t->fd = fd;
